hphp/hack/test/typecheck/function_pointer/reified_inst_meth3.php.exp
File "reified_inst_meth3.php", line 11, characters 3-22:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
